--- a/BalanceComparison/pom.xml
+++ b/BalanceComparison/pom.xml
@@ -6,9 +6,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<build>
-		<finalName>BalanceComparison</finalName>
-	</build>
 	<properties>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<jersey.version>1.8</jersey.version>
@@ -52,7 +49,7 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-	
+
 		<!-- jersey-pojomapping feature -->
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
@@ -89,7 +86,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- Log4j -->
 		<dependency>
 			<groupId>log4j</groupId>
@@ -97,4 +94,39 @@
 			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<finalName>BalanceComparison</finalName>
+		<directory>target</directory>
+		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+		<outputDirectory>target/classes</outputDirectory>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxb2-maven-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<schemaDirectory>${project.basedir}/src/main/resources/input</schemaDirectory>
+					<packageName>com.balance.comparison.dto</packageName>
+					<outputDirectory>${project.basedir}/target/generated-sources</outputDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+
+
 </project>
